--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:quickapp-webview-union": "cross-env NODE_ENV=production UNI_PLATFORM=quickapp-webview-union vue-cli-service uni-build",
     "dev:app-plus": "cross-env NODE_ENV=development UNI_PLATFORM=app-plus vue-cli-service uni-build --watch",
     "dev:custom": "cross-env NODE_ENV=development uniapp-cli custom",
-    "dev:h5": "cross-env NODE_ENV=development UNI_PLATFORM=h5 vue-cli-service uni-serve",
+    "dev:h5": "cross-env NODE_ENV=development UNI_PLATFORM=h5 VUE_APP_PLATFORM=h5 vue-cli-service uni-serve",
     "dev:mp-360": "cross-env NODE_ENV=development UNI_PLATFORM=mp-360 vue-cli-service uni-build --watch",
     "dev:mp-alipay": "cross-env NODE_ENV=development UNI_PLATFORM=mp-alipay vue-cli-service uni-build --watch",
     "dev:mp-baidu": "cross-env NODE_ENV=development UNI_PLATFORM=mp-baidu vue-cli-service uni-build --watch",
@@ -41,68 +41,76 @@
     "lint": "eslint --ext .js,.vue src",
     "lint:eslint": "eslint --cache --max-warnings 0  \"src/**/*.{vue,js}\" --fix",
     "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,json,css,less,scss,vue,html,md}\"",
-    "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/"
+    "lint:stylelint": "stylelint --cache --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+    "postinstall": "node scripts/patch-uni-overlay.js"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "2.0.2-4040520250103001",
-    "@dcloudio/uni-app-plus": "2.0.2-4040520250103001",
-    "@dcloudio/uni-h5": "2.0.2-4040520250103001",
+    "@dcloudio/uni-app": "2.0.2-4070520250711001",
+    "@dcloudio/uni-app-plus": "2.0.2-4070520250711001",
+    "@dcloudio/uni-h5": "2.0.2-4070520250711001",
     "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-i18n": "2.0.2-4040520250103001",
-    "@dcloudio/uni-mp-360": "2.0.2-4040520250103001",
-    "@dcloudio/uni-mp-alipay": "2.0.2-4040520250103001",
-    "@dcloudio/uni-mp-baidu": "2.0.2-4040520250103001",
-    "@dcloudio/uni-mp-jd": "2.0.2-4040520250103001",
-    "@dcloudio/uni-mp-kuaishou": "2.0.2-4040520250103001",
-    "@dcloudio/uni-mp-lark": "2.0.2-4040520250103001",
-    "@dcloudio/uni-mp-qq": "2.0.2-4040520250103001",
-    "@dcloudio/uni-mp-toutiao": "2.0.2-4040520250103001",
-    "@dcloudio/uni-mp-vue": "2.0.2-4040520250103001",
-    "@dcloudio/uni-mp-weixin": "2.0.2-4040520250103001",
-    "@dcloudio/uni-mp-xhs": "2.0.2-4040520250103001",
-    "@dcloudio/uni-quickapp-native": "2.0.2-4040520250103001",
-    "@dcloudio/uni-quickapp-webview": "2.0.2-4040520250103001",
-    "@dcloudio/uni-stacktracey": "2.0.2-4040520250103001",
-    "@dcloudio/uni-stat": "2.0.2-4040520250103001",
-    "@vue/shared": "3.5.13",
-    "core-js": "^3.6.5",
+    "@dcloudio/uni-i18n": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-360": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-alipay": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-baidu": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-harmony": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-jd": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-kuaishou": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-lark": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-qq": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-toutiao": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-vue": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-weixin": "2.0.2-4070520250711001",
+    "@dcloudio/uni-mp-xhs": "2.0.2-4070520250711001",
+    "@dcloudio/uni-stacktracey": "2.0.2-4070520250711001",
+    "@dcloudio/uni-stat": "2.0.2-4070520250711001",
+    "@vue/shared": "3.5.19",
+    "core-js": "^3.45.1",
     "flyio": "0.6.14",
+    "jsencrypt": "^3.5.4",
     "luch-request": "^3.1.1",
-    "regenerator-runtime": "^0.12.1",
+    "regenerator-runtime": "^0.13.11",
     "uni-read-pages": "^1.0.5",
     "uni-router-interceptor": "^2.0.1",
     "uni-simple-router": "^2.0.7",
-    "vue": "^2.6.11",
+    "vue": "^2.6.14",
     "vuex": "3.6.2",
     "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@dcloudio/types": "*",
-    "@dcloudio/uni-automator": "2.0.2-4040520250103001",
-    "@dcloudio/uni-cli-i18n": "2.0.2-4040520250103001",
-    "@dcloudio/uni-cli-shared": "2.0.2-4040520250103001",
-    "@dcloudio/uni-migration": "2.0.2-4040520250103001",
-    "@dcloudio/uni-template-compiler": "2.0.2-4040520250103001",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-4040520250103001",
-    "@dcloudio/vue-cli-plugin-uni": "2.0.2-4040520250103001",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-4040520250103001",
-    "@dcloudio/webpack-uni-mp-loader": "2.0.2-4040520250103001",
-    "@dcloudio/webpack-uni-pages-loader": "2.0.2-4040520250103001",
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
+    "@dcloudio/uni-automator": "2.0.2-4070520250711001",
+    "@dcloudio/uni-cli-i18n": "2.0.2-4070520250711001",
+    "@dcloudio/uni-cli-shared": "2.0.2-4070520250711001",
+    "@dcloudio/uni-migration": "2.0.2-4070520250711001",
+    "@dcloudio/uni-template-compiler": "2.0.2-4070520250711001",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "2.0.2-4070520250711001",
+    "@dcloudio/vue-cli-plugin-uni": "2.0.2-4070520250711001",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "2.0.2-4070520250711001",
+    "@dcloudio/webpack-uni-mp-loader": "2.0.2-4070520250711001",
+    "@dcloudio/webpack-uni-pages-loader": "2.0.2-4070520250711001",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-plugin-vuex": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "1.13.8",
     "compression-webpack-plugin": "^5.0.2",
+    "copy-webpack-plugin": "6.4.1",
     "cross-env": "7.0.3",
+    "css-loader": "5.2.7",
     "eslint": "^7.32.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-vue": "^7.17.0",
+    "html-webpack-plugin": "^5.5.3",
+    "imports-loader": "^5.0.0",
     "jest": "25.5.4",
     "less-loader": "^6.1.2",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
     "postcss-comment": "^2.0.0",
-    "prettier": "^3.6.2",
+    "postcss-px-to-viewport": "^1.1.1",
+    "prettier": "2.8.8",
     "sass": "^1.32.13",
     "sass-loader": "^10.1.1",
     "stylelint": "^13.13.1",
@@ -111,7 +119,8 @@
     "stylelint-order": "^4.1.0",
     "uqrcodejs": "^4.0.7",
     "vue-eslint-parser": "^7.11.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-loader": "^15.10.2",
+    "vue-template-compiler": "^2.6.14"
   },
   "browserslist": [
     "Android >= 4",
